[gd_scene load_steps=3 format=2]

[ext_resource path="res://fonts/Josefin_Sans/120pt/JosefinSans-Bold_120pt.tres" type="DynamicFont" id=1]
[ext_resource path="res://scripts/CompleteScreen.gd" type="Script" id=2]

[node name="CompleteScreen" type="Control" groups=["CompleteScreen"]]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
nextButtonPath = NodePath("MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/NextButton")

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.237071, 0.87451, 0.0823529, 0.392157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 200.0
margin_right = -50.0
margin_bottom = -50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1820.0
margin_bottom = 830.0
custom_constants/separation = 100

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1820.0
margin_bottom = 120.0

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer"]
margin_right = 1820.0
margin_bottom = 120.0
custom_fonts/font = ExtResource( 1 )
text = "Level Complete!"
align = 1
valign = 1
uppercase = true

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 220.0
margin_right = 1820.0
margin_bottom = 570.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer"]
margin_left = 685.0
margin_right = 1135.0
margin_bottom = 350.0
custom_constants/separation = 25
alignment = 1

[node name="NextButton" type="Button" parent="MarginContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_right = 450.0
margin_bottom = 100.0
rect_min_size = Vector2( 450, 100 )
mouse_default_cursor_shape = 2
text = "Next Level"

[node name="RestartButton" type="Button" parent="MarginContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 125.0
margin_right = 450.0
margin_bottom = 225.0
rect_min_size = Vector2( 450, 100 )
mouse_default_cursor_shape = 2
text = "Restart Level"

[node name="MenuButton" type="Button" parent="MarginContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 250.0
margin_right = 450.0
margin_bottom = 350.0
rect_min_size = Vector2( 300, 100 )
mouse_default_cursor_shape = 2
text = "Menu"

[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/NextButton" to="." method="_next_level"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/RestartButton" to="." method="_restart_level"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/MenuButton" to="." method="_load_menu"]
